--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,23 +3,19 @@ version: '3'
 services:
   node:
     container_name: app
-    build: .
+    build: ./node
     restart: always
     ports:
       - "4000:4000"
-    links:
-      - database
-  database:
-    container_name: mysqldb
-    image: mysql:latest
-    volumes:
-      - database:/var/lib/mysql
-      - ./database/schema.sql:/docker-entrypoint-initdb.d
-    restart: always
+    depends_on:
+     - mysqldb
     environment:
-      MYSQL_ROOT_PASSWORD: root
-      MYSQL_DATABASE: buscarlos
-      MYSQL_USER: root
-      MYSQL_PASSWORD: root
-volumes:
-    database:
+     - DATABASE_HOST=mysqldb
+    volumes:
+     - ./node:/usr/src/app
+  mysqldb:
+    container_name: mysqldb
+    build: ./database
+    restart: always
+    ports:
+      - "3306:3306"
