--- a/node/package.json
+++ b/node/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/Exilio016/BusCarlos#readme",
   "dependencies": {
+    "body-parser": "1.18.3",
     "bootstrap": "4.1.1",
     "debug": "3.1.0",
     "ejs": "2.6.1",
