--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,21 +1,23 @@
 version: '3'
 
 services:
+  mysqldb:
+    container_name: mysqldb
+    build: ./database
+    restart: always
+    ports:
+      - "3307:3306"
   node:
     container_name: app
     build: ./node
     restart: always
     ports:
       - "4000:4000"
+    links:
+      - mysqldb:mysqldb
     depends_on:
      - mysqldb
     environment:
      - DATABASE_HOST=mysqldb
     volumes:
      - ./node:/usr/src/app
-  mysqldb:
-    container_name: mysqldb
-    build: ./database
-    restart: always
-    ports:
-      - "3306:3306"
