--- a/database/Dockerfile
+++ b/database/Dockerfile
@@ -5,4 +5,8 @@ ENV MYSQL_DATABASE buscarlos
 ENV MYSQL_USER root  
 ENV MYSQL_PASSWORD root
 
-ADD schema.sql /docker-entrypoint-initdb.d
+ADD creates/create_tables.sql /docker-entrypoint-initdb.d
+ADD inserts/insert_horario.sql /docker-entrypoint-initdb.d
+ADD inserts/insert_linha.sql /docker-entrypoint-initdb.d
+ADD inserts/insert_linha_rua.sql /docker-entrypoint-initdb.d
+ADD inserts/insert_rua.sql /docker-entrypoint-initdb.d
