--- a/node/package.json
+++ b/node/package.json
@@ -30,7 +30,8 @@
     "mysql": "2.15.0",
     "nodemon": "1.17.5",
     "path": "0.12.7",
-    "popper.js": "1.14.3"
+    "popper.js": "1.14.3",
+    "sleep": "5.1.1"
   },
   "devDependencies": {
     "eslint-config-airbnb-base": "12.1.0",
