--- a/database/Dockerfile
+++ b/database/Dockerfile
@@ -5,6 +5,4 @@ ENV MYSQL_DATABASE buscarlos
 ENV MYSQL_USER user
 ENV MYSQL_PASSWORD pass
 
-ADD creates/create_tables.sql /docker-entrypoint-initdb.d
-ADD inserts/insert_linha.sql /docker-entrypoint-initdb.d
-ADD inserts/insert_rua.sql /docker-entrypoint-initdb.d
+ADD ./database_init.sql /docker-entrypoint-initdb.d
