Fix (charset): Mysql opera em UTF-8

--- a/database/Dockerfile
+++ b/database/Dockerfile
@@ -6,3 +6,4 @@ ENV MYSQL_USER user
 ENV MYSQL_PASSWORD pass
 
 ADD ./database_init.sql /docker-entrypoint-initdb.d
+ADD ./charset.cnf /etc/mysql/conf.d/custom.cnf
